update api speci

--- a/rest api/speci.yaml
+++ b/rest api/speci.yaml
@@ -2,13 +2,13 @@ openapi: 3.0.3
 info:
   title: Integration Service API
   description: REST API для интеграции между системой 1 и системой 2 по UUID-ключам
-  version: 1.0.0
+  version: 1.0.1
 
 servers:
   - url: https://pdm-system.com/api/system
-    description: Система 1 (внутренняя)
+    description: Система 1
   - url: https://erp-system.com/api/system
-    description: Система 2 (внешняя)
+    description: Система 2
 
 components:
   securitySchemes:
@@ -18,58 +18,120 @@ components:
       bearerFormat: JWT
 
   schemas:
+    Error:
+      type: object
+      required: [code, message]
+      properties:
+        code:
+          type: string
+          description: Машинный код ошибки
+        message:
+          type: string
+          description: Человекочитаемое описание
+        details:
+          type: object
+          additionalProperties: true
+
     UUIDList:
       type: array
       items:
         type: string
         format: uuid
 
-    AttributeRequest:
+    ObjectAttributes:
       type: object
-      additionalProperties:
-        type: array
-        items:
-          type: string
-
-    AttributeResponse:
-      type: object
-      additionalProperties:
-        type: object
-        additionalProperties: {}
-
-    AttributeData:
-      type: object
+      required: [id, updated_at]
       properties:
+        id:
+          type: string
+          format: uuid
+        updated_at:
+          type: string
+          format: date-time
+          description: Время последнего изменения объекта в формате RFC 3339 (UTC).
         experiment_type:
           type: string
-        ex_pressure:
-          type: number
         exp_pressure:
           type: number
+          description: Давление; укажите единицы (например, bar).
         work_pressure:
           type: number
+          description: Рабочее давление; укажите единицы (например, bar).
         inv_num:
-          type: number
+          type: string
+          description: Инвентарный номер как строка (ведущие нули сохраняются).
         pipe_level:
-          type: number
+          type: integer
         environment_name:
           type: string
         rev_period:
-          type: number
+          type: integer
         work_temp:
           type: number
+          description: Рабочая температура; укажите единицы (например, °C).
+
+    ObjectAttributesList:
+      type: array
+      items:
+        $ref: '#/components/schemas/ObjectAttributes'
 
     UUIDAttributeMap:
       type: object
+      description: Карта UUID → ObjectAttributes
       additionalProperties:
-        $ref: '#/components/schemas/AttributeData'
+        $ref: '#/components/schemas/ObjectAttributes'
+
+  parameters:
+    UpdatedFromParam:
+      name: updated_from
+      in: query
+      description: |
+        Вернуть объекты, изменённые не раньше этой метки времени (включительно).
+        Формат RFC 3339, например 2025-11-06T00:00:00Z.
+      required: false
+      schema:
+        type: string
+        format: date-time
+
+    UpdatedToParam:
+      name: updated_to
+      in: query
+      description: |
+        Верхняя граница интервала изменений (необязательно). Если не задана — используется момент запроса на сервере.
+      required: false
+      schema:
+        type: string
+        format: date-time
+
+    ChangedTodayParam:
+      name: changed_today
+      in: query
+      description: |
+        Упроститель для фильтра «изменено сегодня»: если true, сервер вернёт объекты,
+        у которых updated_at в интервале от начала текущих суток до момента запроса.
+        Начало суток вычисляется в выбранном часовом поясе (`tz`) или в UTC, если tz не указан.
+      required: false
+      schema:
+        type: boolean
+        default: false
+
+    TzParam:
+      name: tz
+      in: query
+      description: |
+        Часовой пояс в формате IANA. Используется для определения «начала суток» при changed_today=true.
+        Если не задан — сервер использует UTC.
+      required: false
+      schema:
+        type: string
+      example: Europe/Oslo
 
 security:
   - bearerAuth: []
 
 paths:
 
-  /classes/objects:
+  /classes1/objects1:
     get:
       summary: Получение списка UUID из системы 1
       operationId: getUuidsFromSystem1
@@ -85,34 +147,82 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UUIDList'
+        '401':
+          description: Неавторизован
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '403':
+          description: Недостаточно прав
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
         '500':
-          description: Ошибка подключения
+          description: Внутренняя ошибка сервера
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
-    post:
-      summary: Поиск UUID-объектов в системе 2
-      operationId: searchUuidsInSystem2
+  /classes2/objects2:
+    get:
+      summary: Получить список объектов с UUID и атрибутами из системы 2
+      description: |
+        Поддерживает фильтрацию по времени изменений через updated_from`/`updated_to
+        или флаг changed_today=true (с опциональным `tz`).
+      operationId: getUuidWithParamsFromSystem2
       tags: [System 2]
       servers:
         - url: https://erp-system.com/api/system
       security:
         - bearerAuth: []
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UUIDList'
+      parameters:
+        - $ref: '#/components/parameters/UpdatedFromParam'
+        - $ref: '#/components/parameters/UpdatedToParam'
+        - $ref: '#/components/parameters/ChangedTodayParam'
+        - $ref: '#/components/parameters/TzParam'
       responses:
         '200':
-          description: Найденные UUID
+          description: ОК
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UUIDList'
-        '400':
-          description: UUID не найдены
+                $ref: '#/components/schemas/ObjectAttributesList'
+              examples:
+                todayOslo:
+                  summary: Изменено сегодня (Europe/Oslo)
+                  value:
+                    - id: "8c6b2f2e-6c1c-4c9a-8d1a-2b3f2d8b1a01"
+                      updated_at: "2025-11-06T07:15:22Z"
+                      experiment_type: "lab"
+                      work_pressure: 1.0
+                explicitWindow:
+                  summary: Явный интервал по времени
+                  value:
+                    - id: "e1c2b9a7-4f2d-43a5-9d6c-0f1a2b3c4d5e"
+                      updated_at: "2025-11-06T05:42:10Z"
+                      environment_name: "Yard"
+                      rev_period: 6
+        '401':
+          description: Неавторизован
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '403':
+          description: Недостаточно прав
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
         '500':
-          description: Ошибка подключения
+          description: Внутренняя ошибка сервера
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
   /objects/attributes:
     put:
@@ -129,36 +239,45 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/UUIDAttributeMap'
+            examples:
+              sample:
+                value:
+                  "7a1d5c9d-8b8d-4c5d-8c6a-3b2a1e0f9d8c":
+                    id: "7a1d5c9d-8b8d-4c5d-8c6a-3b2a1e0f9d8c"
+                    updated_at: "2025-11-06T07:15:22Z"
+                    exp_pressure: 1.2
       responses:
         '200':
           description: Успешное обновление
-        '400':
-          description: UUID не найден
-        '500':
-          description: Внутренняя ошибка сервера
-
-    post:
-      summary: Получение атрибутов объектов по UUID из системы 2
-      operationId: getAttributesFromSystem2
-      tags: [System 2]
-      servers:
-        - url: https://erp-system.com/api/system
-      security:
-        - bearerAuth: []
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AttributeRequest'
-      responses:
-        '200':
-          description: Данные объектов
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AttributeResponse'
+                type: object
+                properties:
+                  updated:
+                    type: integer
+                    description: Количество успешно обновлённых объектов
         '400':
-          description: Ничего не найдено
+          description: Некорректные UUID или данные
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Неавторизован
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '403':
+          description: Недостаточно прав
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
         '500':
-          description: Ошибка подключения
+          description: Внутренняя ошибка сервера
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
